[package]
name = "react-native-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
deno_error = "0.5.5"
pollster = { version =  "0.4.0" }
# includes patch https://github.com/rscarson/rustyscript/pull/350
# rustyscript = { git = "https://github.com/rscarson/rustyscript", rev = "f85e33a9f44eaf35807857f2a5b743a7421ddceb", features = ["all_extensions", "node_experimental"] }
rustyscript = { path = "../rustyscript", features = ["all_extensions", "node_experimental"] }
deno_core = "0.340.0"
serde = { version = "1.0.218", features = ["derive"] }
sys_traits = "0.1.8"
wgpu = { version =  "24.0.1" }
winit = { version =  "0.30.9" }
notify = "8.0.0"
taffy = { version = "0.7.7", features = ["serde"]}
slotmap = "1.0.7"
color = "0.3.1"
