[package]
name = "react-native-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
color = "0.3.1"
deno_core = "0.340.0"
deno_error = "0.5.5"
glyphon = "0.9.0"
notify = "8.0.0"
pollster = { version =  "0.4.0" }
# includes patch https://github.com/rscarson/rustyscript/pull/350
# rustyscript = { git = "https://github.com/rscarson/rustyscript", rev = "f85e33a9f44eaf35807857f2a5b743a7421ddceb", features = ["all_extensions", "node_experimental"] }
rustyscript = { path = "../rustyscript", features = ["all_extensions", "node_experimental"] }
serde = { version = "1.0.218", features = ["derive"] }
slotmap = "1.0.7"
sys_traits = "0.1.8"
taffy = { version = "0.7.7", features = ["serde"]}
wgpu = "25.0.2"
winit = { version =  "0.30.9" }
